--- a/fba_analyst_front/package.json
+++ b/fba_analyst_front/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "element-plus": "^2.1.4",
     "vue": "^3.2.13"
   },
   "devDependencies": {
